--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,12 +1,14 @@
 @import "_tailwind.css";
 
+@font-face {
+  font-family: GreatVibes;
+  src: url("/Font/Great_Vibes/GreatVibes-Regular.ttf");
+}
+
 html,
-body,
-#root,
-.app,
-.content {
+body {
   width: 100%;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 html {
@@ -30,3 +32,17 @@ html {
   background: #555;
 }
 /* ------ */
+
+.bg-header::after {
+  content: "";
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.5),
+    rgba(255, 0, 0, 0)
+  );
+}
